--- a/Melton.csproj
+++ b/Melton.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startmenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Startmenu.Designer.cs">
+      <DependentUpon>Startmenu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BoardUI.resx">
       <DependentUpon>BoardUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -69,7 +75,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Startmenu.resx">
+      <DependentUpon>Startmenu.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -82,6 +92,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
