--- a/Melton.csproj
+++ b/Melton.csproj
@@ -54,6 +54,12 @@
       <DependentUpon>BoardUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Boss.cs" />
+    <Compile Include="Game.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Game.Designer.cs">
+      <DependentUpon>Game.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interfaces.cs" />
     <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
@@ -66,6 +72,9 @@
     </Compile>
     <EmbeddedResource Include="BoardUI.resx">
       <DependentUpon>BoardUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Game.resx">
+      <DependentUpon>Game.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
