--- a/Melton.csproj
+++ b/Melton.csproj
@@ -54,6 +54,12 @@
       <DependentUpon>BoardUI.cs</DependentUpon>
     </Compile>
     <Compile Include="Boss.cs" />
+    <Compile Include="Eigenschaften.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Eigenschaften.Designer.cs">
+      <DependentUpon>Eigenschaften.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     </Compile>
     <EmbeddedResource Include="BoardUI.resx">
       <DependentUpon>BoardUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Eigenschaften.resx">
+      <DependentUpon>Eigenschaften.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
@@ -104,6 +113,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
