--- a/Melton.csproj
+++ b/Melton.csproj
@@ -91,6 +91,9 @@
     <EmbeddedResource Include="BoardUI.resx">
       <DependentUpon>BoardUI.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Characters.resx">
+      <DependentUpon>Characters.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Eigenschaften.resx">
       <DependentUpon>Eigenschaften.cs</DependentUpon>
     </EmbeddedResource>
@@ -109,6 +112,7 @@
     </Compile>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Startmenu.resx">
       <DependentUpon>Startmenu.cs</DependentUpon>
