--- a/Melton.csproj
+++ b/Melton.csproj
@@ -82,6 +82,11 @@
     <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -111,14 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -143,7 +143,28 @@
     <None Include="Resources\logo.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\mage.jpg" />
+    <None Include="Resources\Boss.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Druid.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hunter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Mage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Priester.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rogue.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Warlock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Warrior.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
