--- a/Melton.csproj
+++ b/Melton.csproj
@@ -52,6 +52,9 @@
     <Compile Include="Actions.Designer.cs">
       <DependentUpon>Actions.cs</DependentUpon>
     </Compile>
+    <Compile Include="AllItems.cs" />
+    <Compile Include="InventorySystem.cs" />
+    <Compile Include="ObtainableItem.cs" />
     <Compile Include="MeltonCreature.cs" />
     <Compile Include="BoardUI.cs">
       <SubType>Form</SubType>
