--- a/Melton.csproj
+++ b/Melton.csproj
@@ -56,6 +56,12 @@
       <DependentUpon>Actions.cs</DependentUpon>
     </Compile>
     <Compile Include="AllItems.cs" />
+    <Compile Include="EndMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EndMenu.Designer.cs">
+      <DependentUpon>EndMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="InventorySystem.cs" />
     <Compile Include="LoadingScreen.cs">
       <SubType>Form</SubType>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Eigenschaften.resx">
       <DependentUpon>Eigenschaften.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EndMenu.resx">
+      <DependentUpon>EndMenu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
