--- a/Melton.csproj
+++ b/Melton.csproj
@@ -64,6 +64,12 @@
       <DependentUpon>EndMenu.cs</DependentUpon>
     </Compile>
     <Compile Include="InventorySystem.cs" />
+    <Compile Include="Layouts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Layouts.Designer.cs">
+      <DependentUpon>Layouts.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoadingScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Layouts.resx">
+      <DependentUpon>Layouts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoadingScreen.resx">
       <DependentUpon>LoadingScreen.cs</DependentUpon>
